<resources>
    <string name="app_name">App_covid_19</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="titulo_menu_principal">Main Menu</string>
    <string name="novo_perfil">New Profile</string>
    <string name="gerir_perfis">Manage Profiles</string>
    <string name="sair_app">Exit</string>
    <string name="titulo_gestao_dados">Data Management</string>
    <string name="dados_pessoais">Personal data</string>
    <string name="Doencas">Deseases</string>
    <string name="titulo_dados_pessoais">Personal Data</string>
    <string name="nome">Name</string>
    <string name="guardar_dados_pessoais">Save</string>
    <string name="doencas_conhecidas">Known Diseases</string>
    <string name="guardar_doencas_conhecidas">Save</string>
    <string name="doencas_oncologicas">Oncological</string>
    <string name="hipertensao">Hypertension</string>
    <string name="doencas_respiratorias">Respiratory</string>
    <string name="doencas_cardiovsaculares">Cardiovascular</string>
    <string name="selecionar_perfil">Select Profile</string>
    <string name="gerir_perfil">More Information</string>
    <string name="perfil_selecionado">Selected Profile</string>
    <string name="editar_perfil">Information</string>
    <string name="alterar_prefil">Change profile Data</string>
    <string name="apagar_perfil">Delete Profile</string>
    <string name="registo_diario">Daily Registration</string>
    <string name="historico">Historic</string>
    <string name="titulo_registo_diario">Daily Log</string>
    <string name="temperatura">Temperature</string>
    <string name="tosse">Cough</string>
    <string name="dificuldade_respiratoria">Breathing Difficulty</string>
    <string name="guardar_registo_diario">Save</string>
    <string name="media_temperaturas">Temperature average</string>
    <string name="dias_consecutivos_tosse">Consecutive days with cough</string>
    <string name="dias_consecutivos_dif_resp">Consecutive days with breathing difficulties</string>
    <string name="tabela_registos_diarios">Daily Record Table</string>
    <string name="historic">Historic</string>
    <string name="novo_teste">New</string>
    <string name="testes">Tests</string>
    <string name="resultado_teste">Test Result</string>
    <string name="positivo" translatable="false">Positivo</string>
    <string name="negativo" translatable="false">Negativo</string>
    <string name="guardar">Save</string>
    <string name="titulo_tabela_registos">Daily Record Table</string>
    <string name="titulo_tabela_testes">Tests Table</string>
    <string name="get_date">Get Date</string>
    <string name="daily_date">Daily date</string>
    <string name="data_nascimento">Birth date</string>
    <string name="data_resultado_teste">Test result date</string>
    <string name="nome_item_perfil">Name</string>
    <string name="data_nascimento_item_perfil">Birth date</string>
    <string name="nome_item_registo">Perfil Name</string>
    <string name="data_registo_item_registo">Registration date</string>
    <string name="temperatura_item_registo">Temperature</string>
    <string name="sintomas_item_registo">Simptoms</string>
    <string name="data_teste_item_teste">Test date</string>
    <string name="nome_perfil_item_teste">Perfil name</string>
    <string name="resultado_teste_item_teste">Test result</string>
    <string name="registo_guardado_com_sucesso">Record saved successfully</string>
    <string name="erro_alterar_registo">Could not change record!</string>
    <string name="preencher_nome">Fill in the name!</string>
    <string name="selecionar_data">Select a date!</string>
    <string name="perfil_inserido_sucesso">Profile saved successfully</string>
    <string name="erro_inserir_perfil">Error: It was not possible to insert the profile!</string>
    <string name="eliminar_registo_dialog">Delete Record</string>
    <string name="certeza_eliminar_registo">Are you sure you want to delete the record?</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="registo_eliminado_sucesso">Registration deleted successfully</string>
    <string name="erro_eliminar_registo">Error: It was not possible to delete the record</string>
    <string name="teste_guardado_com_sucesso">Test saved successfully</string>
    <string name="erro_alterar_teste">Error: Could not change the test!</string>
    <string name="eliminar_teste_dialog">Delete Test</string>
    <string name="teste_eliminado_sucesso">Test successfully deleted</string>
    <string name="certeza_eliminar_teste">Are you sure you want to delete the test?</string>
    <string name="erro_alterar_perfil">Error: It was not possible to change the profile!</string>
    <string name="erro_inserir_teste">Could not insert the test!</string>
    <string name="alterar_registo_diario">Daily Log Change</string>
    <string name="doenca_cardiovascular">Cardiovascular Diseaase</string>
    <string name="diabetes">Diabetes</string>
    <string name="doenca_oncologica">Oncological Disease</string>
    <string name="doenca_respiratoria">Respiratory Disease</string>
    <string name="cancelar">Cancelel</string>
    <string name="eliminar">Delete</string>
    <string name="acao_novo_perfil">New Profile</string>
    <string name="acao_editar_perfil">Edit profile</string>
    <string name="mais_informacao">More Information</string>
    <string name="acao_eliminar_perfil">Delete Profile</string>
    <string name="sobre">About</string>
    <string name="voltar">Back</string>
    <string name="autor">"Author: Leandro Gomes                          nº 1012489"</string>
    <string name="versao">"App_covid_19 V1 completed on 06/28/2020.                           Within the scope of the Advanced Programming course."</string>
    <string name="discricao">"This application is intended for home use, in which the user can record the data of each person he resides with, as well as the pathological situation of each person and the history, give more detailed information, about the symptoms that any of these people had and from when they intensified, if you have to resort to the NHS24 or a health facility."</string>
    <string name="configuracoes">Configurations</string>
    <string name="light_theme" translatable="false">Light theme</string>
    <string name="darck_theme" translatable="false">Darck theme</string>
    <string name="registo_inserido_sucesso">Registration inserted successfully</string>
    <string name="erro_inserir_registo">Could not insert record</string>
    <string name="erro_eliminar_teste">Erro: Não foi possivél eliminar o teste</string>
    <string name="inconclusivo" translatable="false">Inconclusivo</string>
    <string name="estatisticas">Statistics</string>
    <string name="nome_invalido"> Invalid Name! \ n Fill in at least first and last name </string>
    <string name="temperatura_invalida">Invalid temperature</string>
    <string name="certeza_eliminar_perfil">Are you sure you want to delete the profile</string>
    <string name="eliminar_perfil">Delete Profile</string>
    <string name="sucesso_eliminar_perfil">Profile deleted successfully</string>
    <string name="erro_eliminar_perfil">Error: It was not possible to delete the profile</string>
    <string name="pessoas_registadas"> \ "Registered people: \"</string>
    <string name="testes_feitos">\ "Tests done: \</string>
    <string name="testes_positivos">\ "Positive tests: \"</string>
    <string name="testes_negativos">\ "Negative tests: \""</string>
    <string name="testes_inconclusivos">\ "Inconclusive tests: \"</string>
    <string name="altera_dados_pessoais">Change Personal Data</string>
</resources>