<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_inserir_teste" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado_teste"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewDataTesteResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDataTesteResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_resultado_teste"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupTeste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/radioGroupTeste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataTesteResultado">

        <RadioButton
            android:id="@+id/radioButtoTestePositivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/positivo" />

        <RadioButton
            android:id="@+id/radioButtonTesteNegativo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/negativo" />

        <RadioButton
            android:id="@+id/radioButtonTesteInconclusivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inconcclusivo" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>