<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_insere_registo_diario">

    <TextView
        android:id="@+id/textViewTituloRegistoDiario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_registo_diario"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinnerPerfis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/textViewDataRegistoDiario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/daily_date"
        app:layout_constraintBottom_toTopOf="@+id/spinnerPerfis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloRegistoDiario" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxTosse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPerfis">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTemperatura"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/temperatura" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxTosse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/tosse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <CheckBox
        android:id="@+id/checkBoxDifResp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/dificuldade_respiratoria"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxTosse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/checkBoxTosse" />

    <Button
        android:id="@+id/buttonGuardarRegistoDiario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar_registo_diario"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCancelarRegistoDiario"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancelarRegistoDiario"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancelarRegistoDiario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonGuardarRegistoDiario"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTosse" />

    <Button
        android:id="@+id/buttonSelecionarDataRegisto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/get_date"
        app:layout_constraintBottom_toTopOf="@+id/spinnerPerfis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloRegistoDiario" />

    <Spinner
        android:id="@+id/spinnerPerfis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataRegistoDiario" />

</androidx.constraintlayout.widget.ConstraintLayout>