<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundos"
    tools:context=".fragment_inserir_perfil" >

    <TextView
        android:id="@+id/textViewTituloDadosPessoais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_dados_pessoais"
        android:textColor="@color/titulos"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSelecionarDataNascimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloDadosPessoais">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:textColor="@color/textInputLayoutText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSelecionarDataNascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/titulosButoes"
        android:backgroundTint="@color/butoes"
        android:text="@string/get_date"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxCardiovascular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNome" />

    <TextView
        android:id="@+id/textViewAlteraDataNascimento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:textColor="@color/texto"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSelecionarDataNascimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toEndOf="@+id/buttonSelecionarDataNascimento" />

    <CheckBox
        android:id="@+id/checkBoxCardiovascular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doencas_cardiovsaculares"
        android:textColor="@color/chekcBoxRbuttonText"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxHipertensao"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxHipertensao"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBoxHipertensao"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelecionarDataNascimento" />

    <CheckBox
        android:id="@+id/checkBoxDiabetes"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/diabetes"
        android:textColor="@color/chekcBoxRbuttonText"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxDoencasOncologicas"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxDoencasOncologicas"
        app:layout_constraintStart_toStartOf="@+id/checkBoxDoencasOncologicas"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlteraDataNascimento" />

    <CheckBox
        android:id="@+id/checkBoxHipertensao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/hipertensao"
        android:textColor="@color/chekcBoxRbuttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxDoencasOncologicas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCardiovascular" />

    <CheckBox
        android:id="@+id/checkBoxDoencasOncologicas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/doencas_oncologicas"
        android:textColor="@color/chekcBoxRbuttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxDiabetes"
        app:layout_constraintVertical_bias="0.685" />

    <CheckBox
        android:id="@+id/checkBoxResp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doencas_respiratorias"
        android:textColor="@color/chekcBoxRbuttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxHipertensao" />
</androidx.constraintlayout.widget.ConstraintLayout>